refactor(main-service): разложил контроллеры/сервисы/мапперы к единой структуре